@@ -100,11 +100,11 @@ Improvements:
    * Naviframe works for H/W Back key event.
    * Naviframe is now supproting focus_direction.
    * Scroller decides whether the accelerator is on or not, depending on the velocity and the interval time of the flick event.
-	* Ctxpopup is now supporting focus_direction.
+   * Ctxpopup is now supporting focus_direction.
    * Don't try to pop the naviframe item multiple times.
-   * Support language change for widget items (Ctxpopup, Hoversel, Naviframe, Diskselector, List, Menu, Segment_Control, Toolbar, Popup, MultibuttonEntry)																 
-	Fixes:
-
+   * Support language change for widget items (Ctxpopup, Hoversel, Naviframe, Diskselector, List, Menu, Segment_Control, Toolbar, Popup, MultibuttonEntry)
+	
+Fixes:
    * Now elm_datetime_field_limit_set() can set year limits wihtout problems.
    * Fix re-order animation when it doesn't end correctly.
    * Fix popup to apply the same style to the notify sub-widget.
@@ -216,6 +216,7 @@ Improvements:
    * Make access object unfocusable when Aaccessibility is disabled.
    * Fix the scrolled entry in scroller is located wrong position when the cursor is changed.
    * Fix null pointer access on naviframe item deletion.
+   * Fix the toolbar item clipped problem on reordering items.
 
 Removals:
 
